# technopark-mail.ru-adv-c-cpp-2021

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.md  clang-format  tasks
data/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
data/test-1/: 1.txt
include/data/: MyResultSrc.h  MyString.h  MySubString.h  ParsedInfo.h
include/parser/: parseFuncs.h  parseSRC.h
scripts/: google_format.sh  local_travis.sh  rebuild.sh
src/: MyString.c  MySubString.c  ParsedInfo.c  func.c  funcOLD  main.c  parseFuncs.c  parseSRC.c
test/: CMakeLists.txt  MyString.cpp  MySubString.cpp  decodeAndPrint.cpp  getDocs.cpp  hashtable.cpp  main.cpp  parseSRC.cpp  read_data.cpp  top5.cpp
tf_idf_lib/include/: hashtable.h  inv_doc_freq.h  read_data.h  string_val.h  term_freq.h
tf_idf_lib/source/: a.out  hashtable.c  inv_doc_freq.c  main.c  read_data.c  string_val.c  term_freq.c
tf_idf_lib/source_threads/: hashtable.c  main.c  read_data.c  term_freq.c
